# ChatIQ

./: .gitignore  README.md  azure-pipelines.yml  docker-compose.yml
server/: .dockerignore  .env  .gitignore  API_RESPONSE_CHANGE.md  Dockerfile  TELEGRAM_IMPORT_FIX.md  TELEGRAM_INTEGRATION.md  TELEGRAM_QUICKSTART.md  TESTING.md  TEST_README.md  agent.py  main.py  pyproject.toml  setup_telegram_webhook.py  test.py  test_agent.py  test_api_manual.py  test_profile_picture.py  test_pydantic.py  test_reply.py  test_telegram_webhook.py
server/.chroma/: chroma.sqlite3
server/app/: __init__.py
server/app/api/v1/: api.py
server/app/api/v1/endpoints/: agent.py  auth.py  chat.py  health.py  insights.py  knowledge.py  webhooks.py
server/app/core/: config.py
server/app/db/: session.py
server/app/dependancies/: auth.py
server/app/models/: __init__.py  agent_configs.py  customers.py  insights.py  messages.py  users.py
server/app/schemas/: __init__.py  auth.py  chat.py  insights.py  knowledge.py
server/app/services/: auth.py  main.py  supabase.py
server/app/services/agent/: main.py
server/app/services/chroma/: __init__.py  service.py
server/app/services/telegram/: .env  __init__.py  agent-manager.js  agent_manager.py  api.js  api_client.py  bot-logic.js  bot.py  bot_logic.py  check_outbound.js  index.js  webhook.py
server/app/services/whatsapp/: .env  whatsapp.py
server/db/: main.py
server/eg/: .chat_app_messages.sqlite  chat_app.ts  main.py
server/migrations/: add_profile_picture_url.sql  add_telegram_user_id.sql
server/models/: chat.py
(+33 files in other folders)
