[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.26.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "chromadb>=1.1.1",
    "fastapi[standard]>=0.135.1",
    "psycopg2>=2.9.11",
    "pypdf>=6.1.3",
    "pydantic>=2.12.5",
    "pydantic-ai-slim[groq]>=1.67.0",
    "pydantic-ai[examples,groq]>=1.67.0",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.48",
    "supabase>=2.28.3",
    "supabase-auth>=2.28.3",
    "uvicorn>=0.41.0",
]
